[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Iván David Guzmán Ruiz <dg071018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
