[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Iván David Guzmán Ruiz <dg071018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pytest = "^8.3.2"
coverage = "^7.6.1"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
